application_manifest/backend-api.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-api
  labels:
    app: backend-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-api
  template:
    metadata:
      labels:
        app: backend-api
    spec:
      containers:
      - name: backend-api
        image: script0kid/article-backend:v0
        ports:
          - containerPort: 5000
      volumes:
        -  name: backend-api-volume
           emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: backend-api-svc
  labels:
    app: backend-api-svc
spec:
  type: ClusterIP
  selector:
    app: backend-api
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
