application_manifest/frontend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-api
  labels:
    app: frontend-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-api
  template:
    metadata:
      labels:
        app: frontend-api
    spec:
      containers:
      - name: frontend-api
        image: script0kid/article-frontend:v0
        ports:
          - containerPort: 30000
      volumes:
        -  name: frontend-api-volume
           emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-api-svc
  labels:
    app: frontend-api-svc
spec:
  type: ClusterIP
  selector:
    app: frontend-api
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
