application_manifest/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  # annotations:
  #   cert-manager.io/cluster-issuer: kubeissuer
  name: backend-api-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: akbaralam.me
    http:
      paths:
      - backend:
          service:
            name: backend-api-svcsvc
            port:
              number: 5000
        path: /
        pathType: Prefix
  tls:
  - hosts: 
    - akbaralam.me
    secretName: 3-tier-app-cert-secret



# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: backend-api-ingress
# spec:
#   ingressClassName: nginx
#   rules:
#     - host: akbaralam.me
#       http:
#           paths:
#             - path: /
#               pathType: Prefix
#               backend:
#                 service:
#                   name: backend-api-svc
#                   port:
#                     number: 5000
